Fix: Add flex wrap to call to action section

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ a {
 .call2action-sub-container {
     background-color: #3882F6;
     display: flex;
+    flex-wrap: wrap;
     padding: 2rem 4rem;
     border-radius: .5rem;
     justify-content: space-between;
